# haro

./: .gitignore  AGENTS.md  Cargo.toml  Containerfile.haro  Containerfile.haro.aarch64  Containerfile.postgres
crates/haro/: Cargo.toml
crates/haro-tui/: Cargo.toml
crates/haro-tui/src/: db.rs  main.rs  ui.rs
crates/haro/migrations/: 20260306000000_init.sql  20260306000005_image_file_ids.sql  20260306000006_telegram_known_chat_ids.sql  20260306000007_telegram_known_chat_ids_metadata.sql  20260306000008_notifier_targets.sql
crates/haro/src/: cli.rs  config.rs  main.rs  models.rs  runner.rs  search.rs
crates/haro/src/agent/: mod.rs
crates/haro/src/api/: gemini.rs  mod.rs
crates/haro/src/channel/: cli.rs  mod.rs  telegram.rs
crates/haro/src/db/: postgres.rs  qdrant.rs
crates/haro/src/runner/: cmd.rs  heartbeat.rs  mod.rs  scheduler.rs
crates/haro/src/tool/: cron.rs  fetch.rs  heartbeat.rs  mod.rs  notify.rs  saachi.rs  search.rs  searxng.rs  skills.rs  task.rs
crates/haro/templates/: cmd.toml  config.toml  cron.toml
deploy/: Containerfile.haro  Containerfile.postgres  docker-compose.yml  init-extensions.sql  pod-release.yaml  pod.yaml
migrations/: 20260306000001_scratchpad.sql  20260306000002_token_usage.sql  20260306000003_message_token_count.sql  20260306000004_pending_ingest.sql
scripts/: build-haro-arm64.sh  build-release.sh
src/: cli.rs  config.rs  main.rs  models.rs  runner.rs  search.rs
src/agent/: config.rs  mod.rs
src/api/: gemini.rs  mod.rs
src/channel/: cli.rs  mod.rs  telegram.rs
src/db/: postgres.rs  qdrant.rs
src/tool/: fetch.rs  mod.rs  notify.rs  scratchpad.rs  skills.rs
templates/: cmd.toml  config.toml
