[package]
name = "haro-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "haro-tui"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
ratatui = "0.30"
crossterm = "0.29"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
toml = "1"
serde = { version = "1", features = ["derive"] }
directories = "6.0.0"
